@@ -30,6 +30,7 @@ import org.traccar.storage.query.Request;
 import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public final class PositionUtil {
 
@@ -56,11 +57,18 @@ public final class PositionUtil {
 
     public static List<Position> getPositions(
             Storage storage, long deviceId, Date from, Date to) throws StorageException {
-        return storage.getObjects(Position.class, new Request(
+        try (var positions = getPositionsStream(storage, deviceId, from, to)) {
+            return positions.toList();
+        }
+    }
+
+    public static Stream<Position> getPositionsStream(
+            Storage storage, long deviceId, Date from, Date to) throws StorageException {
+        return storage.getObjectsStream(Position.class, new Request(
                 new Columns.All(),
                 new Condition.And(
                         new Condition.Equals("deviceId", deviceId),
-                        new Condition.Between("fixTime", "from", from, "to", to)),
+                        new Condition.Between("fixTime", from, to)),
                 new Order("fixTime")));
     }
 
@@ -74,7 +82,7 @@ public final class PositionUtil {
                 new Columns.All(), new Condition.LatestPositions()));
         return positions.stream()
                 .filter(position -> deviceIds.contains(position.getDeviceId()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
